# ClipBridge

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  Cargo.toml  ClipBridge项目Windows外壳文档.md  ClipBridge项目介绍.docx  ClipBridge项目总览.md  ClipBridge项目文档.md  ClipBridge项目核心文档.md  README.md  STATUS.md  deny.toml  release-please-config.json  release-please-manifest.json  rustfmt.toml  需求.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml
.run/: 构建Windows.run.xml  构建安卓arm64.run.xml  构建安卓x86_64.run.xml
cb_core/: Cargo.toml
cb_core/src/: api.rs  cas.rs  clipboard.rs  crypto.rs  discovery.rs  ingest.rs  lib.rs  logs.rs  model.rs  models.rs  net.rs  policy.rs  prelude.rs  proto.rs  session.rs  stats.rs  storage.rs  store.rs  transport.rs  util.rs
cb_core/src/api/: mod.rs
cb_core/src/api/tests/: common.rs  gc.rs  history.rs  image.rs  ingest.rs  m1_net.rs  m1_opaque_integration.rs  m2_meta.rs  m3_content.rs  mod.rs  plan.rs
cb_core/src/discovery/: mod.rs
cb_core/src/net/: mdns.rs  mod.rs  quic.rs
cb_core/src/proto/: mod.rs
cb_core/src/session/: actor.rs  mod.rs  tests.rs
cb_core/src/testsupport/: core.rs  dirs.rs  events.rs  fake_transport.rs  mod.rs
cb_core/src/transport/: cert.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
scripts/: setup-ndk.ps1
tools/: cargo-build.cmd
