#cb_core/Cargo.toml
[package]
name = "cb_core"
version = "0.1.0"



[lib]
# 让 cb_core 库可以在 FFI（Android/Windows 外壳）和 CLI 测试中复用
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1"
rusqlite = { version = "0.37.0", features = ["bundled","chrono"] }
directories = "6.0.0"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
rand = "0.8"

