#cb_core/Cargo.toml
[package]
name = "cb_core"
version = "0.1.0"
edition = "2021"



[lib]
# 让 cb_core 库可以在 FFI（Android/Windows 外壳）和 CLI 测试中复用
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1"
rusqlite = { version = "0.37.0", features = ["bundled","chrono"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
rand = "0.8.5"
base64 = "0.22"
format = "0.2.4"
env = "1.0.1"
# --- 网络与异步 (M1) ---
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
bytes = "1"
futures = "0.3"

# --- QUIC & TLS (全栈使用 0.23 生态) ---
# quinn 0.11 默认使用 rustls 0.23
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
# 显式使用 0.23，并开启 ring 特性 (必须，否则 quinn 无法创建默认 provider)
rustls = { version = "0.23.35", features = ["ring", "std"] }
# rcgen 0.13 配合 rustls 0.23 使用
rcgen = "0.14.6"

# --- 局域网发现 ---
mdns-sd = "0.17.1"

opaque-ke = { version = "3.0", features = ["std", "serde"] }
bincode = "1.3"
curve25519-dalek = { version = "4.1", features = ["rand_core", "digest"] }
rand_chacha = "0.3.1"
tempfile = "3.23.0"

# --- 加密与密钥派生 ---
argon2 = "0.5"
ring = "0.17"